style: improve modal height and overflow bug

--- a/app/styles/_episode.sass
+++ b/app/styles/_episode.sass
@@ -10,3 +10,6 @@
     max-width: 590px
     margin: 10% auto
 
+.channel-episode .mdl-layout
+  overflow: hidden
+
