--- a/app/styles/_episodes.sass
+++ b/app/styles/_episodes.sass
@@ -44,6 +44,8 @@ ul.episodes
     border-top: 1px dashed #bbb
     line-height: 1.5
     padding: 10px 5px
+    max-height: 345px
+    overflow: auto
     &.open
       display: block
     @include respond-to($flex-start-width)
